# BAaP

./: .gitignore  README.md
LR1/: CMakeLists.txt  LR1.vsdx  Task_3.cpp  Отличия основных характеристик ЯП.xlsx
LR1/git/: COMMIT_EDITMSG  ORIG_HEAD  config  index
LR1/git/logs/: HEAD
LR1/git/logs/refs/heads/: main
LR1/git/refs/heads/: main
LR10/Task_1/: CMakeLists.txt  date.cpp  date.h  dates.txt  datetablemanager.cpp  datetablemanager.h  filemanager.cpp  filemanager.h  gtest.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
LR10/Task_2/: CMakeLists.txt  filemanager.cpp  filemanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  schedulemanager.cpp  schedulemanager.h  trainroute.cpp  trainroute.h  trains.txt
LR10/Task_3-4/: CMakeLists.txt
LR10/Task_3-4/include/: binaryoperation.h  expression.h  number.h  tools.h
LR10/Task_3-4/src/: binaryoperation.cpp  number.cpp  tools.cpp
LR10/Task_3-4/test/: gtest.cpp
LR11/Task_1-3/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tools.cpp  tools.h
LR11/Task_4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  widget.cpp  widget.h
LR11/Task_5/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
LR12/Task_1-3/: CMakeLists.txt
LR12/Task_1-3/include/: tools.h
LR12/Task_1-3/src/Task_1/: main.cpp
LR12/Task_1-3/src/Task_2/: main.cpp
LR12/Task_1-3/src/Task_3/: main.cpp
LR12/Task_1-3/tests/: gtest.cpp
LR12/Task_4-5/: CMakeLists.txt  dialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
LR13/Task_1/: CMakeLists.txt  key.cpp  key.h  keyboard.cpp  keyboard.h  layout.h  letter.cpp  letter.h  lorem.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  text.cpp  text.h
LR13/Task_2/: CMakeLists.txt  dialog.cpp  dialog.h  mainwindow.cpp  mainwindow.h
LR14/Task_1-2/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
LR16/Task_1/: CMakeLists.txt
LR16/Task_1/include/: bst.h
LR16/Task_1/tests/: gtest.cpp
LR16/Task_2/: CMakeLists.txt
LR16/Task_2/include/: list.h  listheap.h  vector.h  vectorheap.h
LR16/Task_2/tests/: gtest.cpp
LR2/: CMakeLists.txt
LR2/Task_1/: Task_1.cpp
LR2/Task_10/: Task_10.cpp
LR2/Task_11/: Task_11.cpp
LR2/Task_12/git/: ORIG_HEAD  index
LR2/Task_12/git/logs/: HEAD
LR2/Task_12/git/logs/refs/heads/: first  main  second  third
LR2/Task_12/git/refs/heads/: first  main  second  third
LR2/Task_13/: Task_13.cpp
LR2/Task_2/: Task_2.cpp
LR2/Task_3/: Task_3.cpp
LR2/Task_4/: Task_4.cpp
LR2/Task_5/: Task_5.cpp
LR2/Task_5/git/: COMMIT_EDITMSG  ORIG_HEAD  index
LR2/Task_5/git/logs/: HEAD
LR2/Task_5/git/logs/refs/heads/: control  main
LR2/Task_5/git/refs/heads/: control  main
LR2/Task_6/: Task_6.cpp
LR2/Task_6/git/: COMMIT_EDITMSG  ORIG_HEAD  index
LR2/Task_6/git/logs/: HEAD
LR2/Task_6/git/logs/refs/heads/: main  option_10  option_2  option_3  option_4  option_5  option_6  option_7  option_8  option_9
LR2/Task_6/git/refs/heads/: main  option_10  option_2  option_3  option_4  option_5  option_6  option_7  option_8  option_9
LR2/Task_7/: Task_7.cpp
LR2/Task_8/: Task_8.cpp  cmath.h
LR2/Task_9/: Task_9.cpp
LR2/git/: index
LR2/git/logs/: HEAD
LR2/git/refs/heads/: main
LR3/: .CMakeLists.txt.swp  CMakeLists.txt
LR3/Task_1/: main.cpp
LR3/Task_2/: main.cpp
LR3/Task_3/: main  main.cpp
LR3/Task_4/: LR3_4.vsdx  main.cpp
LR3/Task_5/: LR3_5.vsdx  main.cpp
LR3/Task_6/: cmath.h  main.cpp
LR3/Task_7/: main.cpp
LR3/Task_8/: main.cpp
LR4/: CMakeLists.txt
LR4/include/: tools.h
LR4/src/Task_1/: main.cpp
LR4/src/Task_2/: main.cpp
LR4/src/Task_3/: main.cpp
LR4/src/Task_4/: LR4_4.vsdx  main.c
LR4/src/Task_5/: LR4_5.vsdx  main.c
LR4/src/Task_6/: LR4_6.vsdx  main.c
LR4/test/: gtest.cpp
LR5/: CMakeLists.txt
LR5/include/: tools.h
LR5/src/LR5_1/: LR5_1.cpp  LR5_1.sln  LR5_1.vcxproj  LR5_1.vcxproj.filters
LR5/src/LR5_1/LR5_1/x64/Debug/: LR5_1.exe.recipe  LR5_1.ilk  vc143.idb
LR5/src/LR5_1/LR5_1/x64/Debug/LR5_1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  LR5_1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
LR5/src/LR5_1/x64/Debug/: LR5_StaticLib1.idb  LR5_StaticLib1.lib
LR5/src/LR5_2/: LR5_2.sln  LR5_2.vcxproj  main.cpp
LR5/src/LR5_2/LR5_2/x64/Debug/: LR5_2.dll.recipe  LR5_2.exe.recipe  LR5_2.ilk  vc143.idb
LR5/src/LR5_2/LR5_2/x64/Debug/LR5_2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  LR5_2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
LR5/src/LR5_2/x64/Debug/: LR5_DynamicLib.exp  LR5_DynamicLib.lib
LR5/src/LR5_DynamicLib/: LR5_DynamicLib.vcxproj  LR5_DynamicLib.vcxproj.filters  libdynamic.cpp  libdynamic.h
LR5/src/LR5_DynamicLib/x64/Debug/: LR5_DynamicLib.dll.recipe  LR5_DynamicLib.ilk  vc143.idb
LR5/src/LR5_DynamicLib/x64/Debug/LR5_DynamicLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
LR5/src/LR5_StaticLib1/: LR5_StaticLib1.cpp  LR5_StaticLib1.h  LR5_StaticLib1.vcxproj  LR5_StaticLib1.vcxproj.filters
LR5/src/LR5_StaticLib1/x64/Debug/: LR5_StaticLib1.pch
LR5/src/LR5_StaticLib1/x64/Debug/LR5_StaticLib1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
LR5/src/Task_3/: main.cpp
LR5/src/Task_4/: main.cpp
LR5/src/Task_5/: main.cpp
LR5/test/: gtest.cpp
LR6/: CMakeLists.txt
LR6/include/: tools.cpp  tools.h
LR6/src/Task_1/: LR6_1.vsdx  main.cpp
LR6/src/Task_2/: LR6_2.vsdx  main.cpp
LR6/src/Task_3/: LR6_3.vsdx  main.cpp
LR6/test/: gtest.cpp
LR7/: CMakeLists.txt
LR7/include/: tools.cpp  tools.h
LR7/src/Task_1/: main.cpp
LR7/src/Task_2/: main.cpp
LR7/src/Task_3/: main.cpp
LR7/src/Task_4/: main.cpp
LR7/src/Task_5/: main.cpp
LR8/: CMakeLists.txt
LR8/include/: student_tools.h  train_tools.h
LR8/src/: student_tools.cpp  train_tools.cpp
LR8/src/Task_1/: main.cpp
LR8/src/Task_2/: main.cpp
(+74 files in other folders)
